--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Code Along Exericse">
     <meta name="author" content="J.Keeley">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <title>Code Along Exercise</title>
 </head>
-<body>
-    
 
-    
+<body>
+    <div class="container">
+        <div class="navbar">
+            <img src="./CodeAlongImages/Movie.png" alt="yellow movie logo" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="HOME">HOME</a> </li>
+                    <li><a href="CATEGORY">CATEGORY</a> </li>
+                    <li><a href="TRENDING">TRENDING</a> </li>
+                    <li><a href="ABOUT">ABOUT</a> </li>
+                </ul>
+            </nav>
+            <img src="./CodeAlongImages/menu.png" alt="horizontal lines" class="menu-icon">
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h1>MovieHub</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam laborum ratione dolor libero. Nisi, expedita laudantium! Dolor unde accusantium mollitia quos, nemo alias eos in numquam, labore, minus et animi.</p>
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
