--- a/index.html
+++ b/index.html
@@ -32,9 +32,26 @@
         <div class="row">
             <div class="col">
                 <h1>MovieHub</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam laborum ratione dolor libero. Nisi, expedita laudantium! Dolor unde accusantium mollitia quos, nemo alias eos in numquam, labore, minus et animi.</p>
+                <p>I made this page with the help of a YouTube tutorial. Here are some of my personal favorite films.</p>
+                <button type="button">Explore</button>
             </div>
             <div class="col">
+                <div class="card card1">
+                    <h5>The Witch</h5>
+                    <p>This is my personal favorite out of any movie.</p>
+                </div>
+                <div class="card card2">
+                    <h5>Signs</h5>
+                    <p>This was the first horror movie I ever watched. I credit it for starting my fascination with aliens.</p>
+                </div>
+                <div class="card card3">
+                    <h5>Highlander</h5>
+                    <p>This is a sentimental favorite I share with my dad.</p>
+                </div>
+                <div class="card card4">
+                    <h5>Castle in the Sky</h5>
+                    <p>I imprinted on this movie when I was really young, in large part because the heroine was unlike anything I was familiar with at the time and the plot didn't shy away from more mature themes. </p>
+                </div>
 
             </div>
         </div>
